--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
 	color: blue;
 }
 body{
@@ -14,5 +14,5 @@ body{
 	color: blue;
 	font-size: larger;
 background-color: green;
-display: inline-flex;
+display: inline-flex; */
 }
